three new project

--- a/archive_project_aim.html
+++ b/archive_project_aim.html
@@ -13,7 +13,7 @@
     <title>Amber Lin | AiM</title>
 
     <!-- Bootstrap core CSS -->
-     
+
 
     <!-- Custom styles for this template -->
     <link href="css/application.css" rel="stylesheet">
@@ -50,10 +50,10 @@
     </div>
 
     <div class="container">
-      <div class="row" id="title-row">
-        <div id="title-text-section" class="col-xs-12">
-          <div><h1 class="title-text clearfix">AiM</h1><h3 class='subtitle-text'>Mobile / Web Design</h3></div>
-          <div class='clearfix'>
+      <div class="row row-summary">
+        <div class="col-xs-12 summary-title">
+          <div><h1>AiM</h1><h3>Mobile / Web Design</h3></div>
+          <div class='col-xs-12 summary-item'>
             <div class="item-title">
               <p>Date:</p>
             </div>
@@ -61,7 +61,7 @@
               <p>Aug. 2015 - Present</p>
             </div>
           </div>
-          <div class='clearfix'>
+          <div class='col-xs-12 summary-item'>
             <div class="item-title">
               <p>Team:</p>
             </div>
@@ -69,7 +69,7 @@
               <p>Joint Development Poject (JDP) Team</p>
             </div>
           </div>
-          <div class='clearfix'>
+          <div class='col-xs-12 summary-item'>
             <div class="item-title">
               <p>My Role:</p>
             </div>
@@ -77,7 +77,7 @@
               <p>UX / UI Designer</p>
             </div>
           </div>
-          <div class='clearfix'>
+          <div class='col-xs-12 summary-item'>
             <div class="item-title">
               <p>Skills:</p>
             </div>
@@ -85,7 +85,7 @@
               <p>Material Design, Prototyping, Wireframing, Sketching, User Testing, Field research</p>
             </div>
           </div>
-          <div class='clearfix'>
+          <div class='col-xs-12 summary-item'>
             <div class="item-title">
               <p>Tools:</p>
             </div>
@@ -95,8 +95,8 @@
           </div>
         </div>
       </div>
-      <div class="row" id="content-row">
-        <div class="col-xs-12" id="text-section">
+      <div class="row" >
+        <div class="col-xs-12 detail-wrap">
           <p>I am currently a UX/UI designer at <a class='link-text' href='http://homepage.aiminspections.com/' target="_blank"> Alliance Inspection Management (AiM) </a> - JDP team, striving to create several mobile applications to make car inspectors’ life easier.</p>
           <br>
           <p>AiM is a premier new and pre-owned vehicle inspection company with 500+ inspectors nationwide. Currently, car inspectors need to carry a heavy Toughbook, a digital camera, and a printer with them to finish each inspection. They use Toughbook to check their daily schedule and enter vehicle data; they use digital camera to capture all required pictures; and they use printer to print out condition report.</p>
@@ -105,15 +105,15 @@
           <br>
           <p>So, these two apps are the two mobile design projects I am working on now:</p>
           <br>
-          <p class="green">AiM Schedule (In Production)</p>
+          <p>AiM Schedule (In Production)</p>
           <p>An android app which car inspectors can check their daily schedule and update their status</p>
           <br>
-          <p class="green">AiM Inspect (Pilot)</p>
+          <p>AiM Inspect (Pilot)</p>
           <p>An Android app which car inspectors can collect all vehicle information (Trim info, tire, damage, condition, pictures, etc.) and upload data to cloud.<p>
           <br>
           Additionally, I’m also working on the other web design project:</p>
           <br>
-          <p class="green">CRM</p>
+          <p>CRM</p>
           <p>A website which our customer can request inspection online, dispatch team can schedule appointment, and data management team can manage all records.</p>
           <br>
           <h4>Design Process</h4>
@@ -140,7 +140,7 @@
         <p class="footer-text">All Right Reserved © Amber Lin 2016</p>
         <div class="footer-social">
           <a href="mailto:imbeckybecky@gmail.com"><img src="img/social/email.png" class="social-icon" /></a1>
-          
+
           <a href="https://www.linkedin.com/in/yuhlin/" target="_blank"><img src="img/social/linkedin.png" class="social-icon" /></a>
           <a href="mailto:imbeckybecky@gmail.com"><img src="img/social/email.png" class="social-icon" /></a>
         </div>
