--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
               <img src="img/Project/aiminspect_grey.png">
               <div class="project-intro text-center">
                 <div class="project-intro-text">
-                  <h2>AIM Inspect</h2>
+                  <h2>AiM Inspect</h2>
                   <p>Android App Design</p>
                 </div>
               </div>
