--- a/project_aiminspect.html
+++ b/project_aiminspect.html
@@ -50,10 +50,12 @@
     </div>
 
     <div class="container">
-      <div class="row" id="title-row">
-        <div id="title-text-section" class="col-xs-12">
-          <div><h1 class="title-text clearfix">AiM Inspect</h1><h3 class='subtitle-text'>Android App Design</h3></div>
-          <div class='clearfix'>
+      <div class="row row-summary">
+        <div class="col-xs-12 summary-title">
+          <h1>AiM Inspect</h1>
+          <h3>Android App Design</h3>
+        </div>
+          <div class='col-xs-12 summary-item'>
             <div class="item-title">
               <p>Date:</p>
             </div>
@@ -61,7 +63,7 @@
               <p>Aug. 2015 - Present</p>
             </div>
           </div>
-          <div class='clearfix'>
+          <div class='col-xs-12 summary-item'>
             <div class="item-title">
               <p>Team:</p>
             </div>
@@ -69,7 +71,7 @@
               <p>AiM Joint Development Poject (JDP) Team</p>
             </div>
           </div>
-          <div class='clearfix'>
+          <div class='col-xs-12 summary-item'>
             <div class="item-title">
               <p>My Role:</p>
             </div>
@@ -77,7 +79,7 @@
               <p>UX / UI Designer</p>
             </div>
           </div>
-          <div class='clearfix'>
+          <div class='col-xs-12 summary-item'>
             <div class="item-title">
               <p>Skills:</p>
             </div>
@@ -85,7 +87,7 @@
               <p>Material Design, Prototyping, Wireframing, Sketching, User Testing, Field research</p>
             </div>
           </div>
-          <div class='clearfix'>
+          <div class='col-xs-12 summary-item'>
             <div class="item-title">
               <p>Tools:</p>
             </div>
@@ -93,10 +95,9 @@
               <p>Photoshop, Illustrator, Experience Design</p>
             </div>
           </div>
-        </div>
       </div>
-      <div class="row" id="content-row">
-        <div class="col-xs-12" id="text-section">
+      <div class="row">
+        <div class="col-xs-12 detail-wrap">
           <h3>Overview</h3>
           <p>AiM Inspect is an Android app designed for car inspectors to collect all the vehicle data, keep track of damage condition, capture required photos, and upload report to cloud.</p>
           <h3>User Group</h3>
@@ -138,9 +139,9 @@
           <h5>Final design</h5>
           <p>After couple rounds of UX sessions, user testing and modifications, I delivered my final design. My design follows Material Design Guidelines to provide our user a consistent user experience when navigating between different Android apps.</p>
 
-          <p><small>This is an ongoing project that we still work with different manufactures to implement different guidelines. We keep working with product managers, developers, quality assurance engineers, and users to make sure the app is working as what we designed.</small></p>
+          <p class="small">This is an ongoing project that we still work with different manufactures to implement different guidelines. We keep working with product managers, developers, quality assurance engineers, and users to make sure the app is working as what we designed.</p>
 
-          <p><small>Due to confidentiality agreement, I couldn't show my works online. But I’d love to share more details offline.</small></p>
+          <p class="small">Due to confidentiality agreement, I couldn't show my works online. But I’d love to share more details offline.</p>
         </div>
 
       </div>
@@ -151,7 +152,7 @@
         <p class="footer-text">All Right Reserved © Amber Lin 2016</p>
         <div class="footer-social">
           <a href="mailto:imbeckybecky@gmail.com"><img src="img/social/email.png" class="social-icon" /></a1>
-          
+
           <a href="https://www.linkedin.com/in/yuhlin/" target="_blank"><img src="img/social/linkedin.png" class="social-icon" /></a>
           <a href="mailto:imbeckybecky@gmail.com"><img src="img/social/email.png" class="social-icon" /></a>
         </div>
@@ -164,10 +165,6 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <script type="text/javascript">
-      // $(document).ready(function(){
-      //   $('#title-row').width($(document).width());
-      // })
-    </script>
+
   </body>
 </html>
