--- a/project_aimschedule.html
+++ b/project_aimschedule.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <meta charset="utf-8">
@@ -13,147 +14,155 @@
     <title>Amber Lin | AiM Schedule</title>
 
     <!-- Bootstrap core CSS -->
-     
+
 
     <!-- Custom styles for this template -->
     <link href="css/application.css" rel="stylesheet">
 
-        <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-  </head>
+</head>
 
-  <body>
+<body>
 
     <div class="navbar navbar-fixed-top" role="navigation" id="navi-section">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-id">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-logo" href="index.html"><img src="img/logo.png"/><div class='logo-name'>Amber Lin</div><div class='logo-title'>UX/UI Designer</div></a>
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-id">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-logo" href="index.html"><img src="img/logo.png" />
+                    <div class='logo-name'>Amber Lin</div>
+                    <div class='logo-title'>UX/UI Designer</div>
+                </a>
+            </div>
+            <div class="collapse navbar-collapse" id="navbar-collapse-id">
+                <ul id="navi-menu" class="nav navbar-nav">
+                    <!-- <li class="active"><a href="#">Home</a></li> -->
+                    <li class="active"><a href="index.html">Portfolio</a></li>
+                    <li><a href="about.html">About Me</a></li>
+                    <li><a href="resume.html">Resume</a></li>
+                </ul>
+            </div>
+            <!--/.nav-collapse -->
         </div>
-        <div class="collapse navbar-collapse" id="navbar-collapse-id">
-          <ul id="navi-menu" class="nav navbar-nav">
-            <!-- <li class="active"><a href="#">Home</a></li> -->
-            <li class="active"><a href="index.html">Portfolio</a></li>
-            <li><a href="about.html">About Me</a></li>
-            <li><a href="resume.html">Resume</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
     </div>
 
     <div class="container">
-      <div class="row" id="title-row">
-        <div id="title-text-section" class="col-xs-12">
-          <div><h1 class="title-text clearfix">AiM Schedule</h1><h3 class='subtitle-text'>Android App Design</h3></div>
-          <div class='clearfix'>
-            <div class="item-title">
-              <p>Date:</p>
+        <div class="row row-summary">
+            <div class="col-xs-12 summary-title">
+                <h1>AiM Schedule</h1>
+                <h3>Android App Design</h3></div>
+            <div class='col-xs-12 summary-item'>
+                <div class="item-title">
+                    <p>Date:</p>
+                </div>
+                <div class="item-content">
+                    <p>Aug. 2015 - Present</p>
+                </div>
             </div>
-            <div class="item-content">
-              <p>Aug. 2015 - Present</p>
+            <div class='col-xs-12 summary-item'>
+                <div class="item-title">
+                    <p>Team:</p>
+                </div>
+                <div class="item-content">
+                    <p>AiM Joint Development Poject (JDP) Team</p>
+                </div>
             </div>
-          </div>
-          <div class='clearfix'>
-            <div class="item-title">
-              <p>Team:</p>
+            <div class='col-xs-12 summary-item'>
+                <div class="item-title">
+                    <p>My Role:</p>
+                </div>
+                <div class="item-content">
+                    <p>UX / UI Designer</p>
+                </div>
             </div>
-            <div class="item-content">
-              <p>AiM Joint Development Poject (JDP) Team</p>
+            <div class='col-xs-12 summary-item'>
+                <div class="item-title">
+                    <p>Skills:</p>
+                </div>
+                <div class="item-content">
+                    <p>Material Design, Prototyping, Wireframing, Sketching, User Testing, Field research</p>
+                </div>
             </div>
-          </div>
-          <div class='clearfix'>
-            <div class="item-title">
-              <p>My Role:</p>
+            <div class='col-xs-12 summary-item'>
+                <div class="item-title">
+                    <p>Tools:</p>
+                </div>
+                <div class="item-content">
+                    <p>Photoshop, Illustrator</p>
+                </div>
             </div>
-            <div class="item-content">
-              <p>UX / UI Designer</p>
-            </div>
-          </div>
-          <div class='clearfix'>
-            <div class="item-title">
-              <p>Skills:</p>
-            </div>
-            <div class="item-content">
-              <p>Material Design, Prototyping, Wireframing, Sketching, User Testing, Field research</p>
-            </div>
-          </div>
-          <div class='clearfix'>
-            <div class="item-title">
-              <p>Tools:</p>
-            </div>
-            <div class="item-content">
-              <p>Photoshop, Illustrator</p>
-            </div>
-          </div>
         </div>
-      </div>
-      <div class="row" id="content-row">
-        <div class="col-xs-12" id="text-section">
-          <h3>Overview</h3>
-          <p>AiM Schedule is an Android app designed for car inspectors to check their daily schedule, look up appointment details, update inspection status, and see the time blocks for the next 5 days.</p>
-          <h3>User Group</h3>
-          <p>AiM car inspectors</p>
-          <ul>
-            <li>Different experience level</li>
-            <li>Working in diverse circumstances</li>
-            <li>Not always tech-savvy</li>
-          </ul>
-          <h3>Existing Legacy System</h3>
-          <p>AiM has a set of software installed in Toughbook for auto inspection use, which has been using in the past 20 years. Currently, our car inspectors are still using one of this software in Toughbook to check their daily schedule, look up appointment detail, and update inspection status.</p>
-          <p>The main problems for existing system are:</p>
-          <ul>
-            <li>For all appointments in the same location, the user needs to navigate back and forth to gather information needed</li>
-            <li>No connection between phone and Toughbook</li>
-            <li>Appointment does not update immediately</li>
-          </ul>
+        <div class="row">
+            <div class="col-xs-12 detail-wrap">
+                <h3>Overview</h3>
+                <p>AiM Schedule is an Android app designed for car inspectors to check their daily schedule, look up appointment details, update inspection status, and see the time blocks for the next 5 days.</p>
+                <h3>User Group</h3>
+                <p>AiM car inspectors</p>
+                <ul>
+                    <li>Different experience level</li>
+                    <li>Working in diverse circumstances</li>
+                    <li>Not always tech-savvy</li>
+                </ul>
+                <h3>Existing Legacy System</h3>
+                <p>AiM has a set of software installed in Toughbook for auto inspection use, which has been using in the past 20 years. Currently, our car inspectors are still using one of this software in Toughbook to check their daily schedule, look up
+                    appointment detail, and update inspection status.</p>
+                <p>The main problems for existing system are:</p>
+                <ul>
+                    <li>For all appointments in the same location, the user needs to navigate back and forth to gather information needed</li>
+                    <li>No connection between phone and Toughbook</li>
+                    <li>Appointment does not update immediately</li>
+                </ul>
 
-          <h3>Design Ideas</h3>
-          <p>Even the main functionalities will stay the same, replacing the existing system by a smart phone and redesigning the user flow will provide a better user experience and let inspectors work more efficiently:</p>
-          <ul>
-            <li>Show important data in the primary position</li>
-            <li>Group necessary information together</li>
-            <li>Integrate phone/map functionalities with the phone</li>
-            <li>Keep data up-to-date, get in-time notification for appointment update</li>
-          </ul>
+                <h3>Design Ideas</h3>
+                <p>Even the main functionalities will stay the same, replacing the existing system by a smart phone and redesigning the user flow will provide a better user experience and let inspectors work more efficiently:</p>
+                <ul>
+                    <li>Show important data in the primary position</li>
+                    <li>Group necessary information together</li>
+                    <li>Integrate phone/map functionalities with the phone</li>
+                    <li>Keep data up-to-date, get in-time notification for appointment update</li>
+                </ul>
 
-          <h3>Design Process</h3>
-          <h5>Be empathetic - field observation</h5>
-          <p>To know more about our car inspectors’ current process, I rode along with several inspectors to observe their workflow and understand their pain points. Also, I spent sometime playing with the existing legacy system to know how it works today.</p>
-          <h5>Ideation</h5>
-          <p>After gathering enough information from research and business requirements from stakeholders, I sketched some ideas and used them as the base of conversation with the team.</p>
-          <h5>Prototype</h5>
-          <p>After discussing with the team, we narrowed down to 2 ideas that we want to present to users. I created hi-fi prototypes and interaction workflow for best presenting our ideas to users in the UX session.</p>
-          <h5>Evaluation</h5>
-          <p>We conduct UX session every two weeks and invite 5 real users and 2 stakeholders in house to validate our ideas. In the UX session, we would present our ideas and let users share what they like, what they don’t like, and what will make it better. After each session, we would have a quick debriefing to make sure we gathered all the information we need; and I would modify my mockups based on users’ feedback.</p>
-          <h5>Final design</h5>
-          <p>After couple rounds of UX sessions and modifications, I delivered my final design. My design follows Material Design Guidelines to provide our user a consistent user experience when navigating between different Android apps. </p>
+                <h3>Design Process</h3>
+                <h5>Be empathetic - field observation</h5>
+                <p>To know more about our car inspectors’ current process, I rode along with several inspectors to observe their workflow and understand their pain points. Also, I spent sometime playing with the existing legacy system to know how it works
+                    today.</p>
+                <h5>Ideation</h5>
+                <p>After gathering enough information from research and business requirements from stakeholders, I sketched some ideas and used them as the base of conversation with the team.</p>
+                <h5>Prototype</h5>
+                <p>After discussing with the team, we narrowed down to 2 ideas that we want to present to users. I created hi-fi prototypes and interaction workflow for best presenting our ideas to users in the UX session.</p>
+                <h5>Evaluation</h5>
+                <p>We conduct UX session every two weeks and invite 5 real users and 2 stakeholders in house to validate our ideas. In the UX session, we would present our ideas and let users share what they like, what they don’t like, and what will make
+                    it better. After each session, we would have a quick debriefing to make sure we gathered all the information we need; and I would modify my mockups based on users’ feedback.</p>
+                <h5>Final design</h5>
+                <p>After couple rounds of UX sessions and modifications, I delivered my final design. My design follows Material Design Guidelines to provide our user a consistent user experience when navigating between different Android apps. </p>
 
-          <p><small>This is an ongoing project that we keep working with product managers, developers, quality assurance engineers, and users to make sure the app is working as what we designed. We also work on adding more features in the near future.</small></p>
+                <p><small>This is an ongoing project that we keep working with product managers, developers, quality assurance engineers, and users to make sure the app is working as what we designed. We also work on adding more features in the near future.</small></p>
 
-          <p><small>Due to confidentiality agreement, I couldn't show my works online. But I’d love to share more details offline.</small></p>
+                <p><small>Due to confidentiality agreement, I couldn't show my works online. But I’d love to share more details offline.</small></p>
+            </div>
+
         </div>
-
-      </div>
-    </div><!-- /.container -->
+    </div>
+    <!-- /.container -->
 
     <div class="footer">
-      <div class="container">
-        <p class="footer-text">All Right Reserved © Amber Lin 2016</p>
-        <div class="footer-social">
-          <a href="mailto:imbeckybecky@gmail.com"><img src="img/social/email.png" class="social-icon" /></a1>
-          
-          <a href="https://www.linkedin.com/in/yuhlin/" target="_blank"><img src="img/social/linkedin.png" class="social-icon" /></a>
-          <a href="mailto:imbeckybecky@gmail.com"><img src="img/social/email.png" class="social-icon" /></a>
+        <div class="container">
+            <p class="footer-text">All Right Reserved © Amber Lin 2016</p>
+            <div class="footer-social">
+                <a href="mailto:imbeckybecky@gmail.com"><img src="img/social/email.png" class="social-icon" /></a1>
+
+                    <a href="https://www.linkedin.com/in/yuhlin/" target="_blank"><img src="img/social/linkedin.png" class="social-icon" /></a>
+                    <a href="mailto:imbeckybecky@gmail.com"><img src="img/social/email.png" class="social-icon" /></a>
+            </div>
         </div>
-      </div>
     </div>
 
 
@@ -162,10 +171,7 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <script type="text/javascript">
-      // $(document).ready(function(){
-      //   $('#title-row').width($(document).width());
-      // })
-    </script>
-  </body>
+
+</body>
+
 </html>
