--- a/project_floc.html
+++ b/project_floc.html
@@ -50,10 +50,10 @@
     </div>
 
     <div class="container">
-      <div class="row" id="title-row">
-        <div id="title-text-section" class="col-xs-12">
-          <div><h1 class="title-text clearfix">For Love of Children</h1><h3 class='subtitle-text'>UX Design & Research Intern</h3></div>
-          <div class='clearfix'>
+      <div class="row row-summary">
+        <div class="col-xs-12 summary-title">
+          <div><h1>For Love of Children</h1><h3>UX Design & Research Intern</h3></div>
+          <div class='col-xs-12 summary-item'>
             <div class="item-title">
               <p>Date:</p>
             </div>
@@ -61,7 +61,7 @@
               <p>Mar. 2014</p>
             </div>
           </div>
-          <div class='clearfix'>
+          <div class='col-xs-12 summary-item'>
             <div class="item-title">
               <p>Team Member:</p>
             </div>
@@ -69,7 +69,7 @@
               <p>Xin Liu, Yuan Gao, Xinying Li</p>
             </div>
           </div>
-          <div class='clearfix'>
+          <div class='col-xs-12 summary-item'>
             <div class="item-title">
               <p>My Role:</p>
             </div>
@@ -77,7 +77,7 @@
               <p>UX Designer and Researcher</p>
             </div>
           </div>
-          <div class='clearfix'>
+          <div class='col-xs-12 summary-item'>
             <div class="item-title">
               <p>Skills:</p>
             </div>
@@ -85,7 +85,7 @@
               <p>Survey, Heuristic Evaluation, Prototyping</p>
             </div>
           </div>
-          <div class='clearfix'>
+          <div class='col-xs-12 summary-item'>
             <div class="item-title">
               <p>Tools:</p>
             </div>
@@ -95,8 +95,8 @@
           </div>
         </div>
       </div>
-      <div class="row" id="content-row">
-        <div class="col-xs-7" id="text-section">
+      <div class="row" >
+        <div class="col-xs-7 detail-wrap">
           <p>During the spring break in 2014, I participated in <a class='link-text' href='https://www.si.umich.edu/careers/alternative-spring-break' target="_blank">Alternative Spring Break (ASB) </a>program and worked with <a class='link-text' href='https://www.floc.org/' target="_blank">For Love of Children </a> in Washington, DC, helping them evaluate their website and redesign part of the web pages.<br>
           <br>
           First, we conducted a survey to understand real users’ behavior and needs; and further ask about their feedback about current website. At the same time, we did a heuristic evaluation of current website based on Jakob Nielsen’s “10 Usability Heuristics for User Interface Design”. We performed an individual analysis of the site’s major features, grouping our findings underneath Nielsen’s taxonomy. According to the results from survey response and findings from heuristic evaluation, we created mid-fi prototype. 
