--- a/project_infovis.html
+++ b/project_infovis.html
@@ -50,10 +50,10 @@
     </div>
 
     <div class="container">
-      <div class="row" id="title-row">
-        <div id="title-text-section" class="col-xs-12">
-          <div><h1 class="title-text clearfix">Oscar Best Picture</h1><h3 class='subtitle-text'>Information Visualization</h3></div>
-          <div class='clearfix'>
+      <div class="row row-summary">
+        <div class="col-xs-12 summary-title">
+          <div><h1>Oscar Best Picture</h1><h3>Information Visualization</h3></div>
+          <div class='col-xs-12 summary-item'>
             <div class="item-title">
               <p>&nbsp</p>
             </div>
@@ -61,7 +61,7 @@
               <p>&nbsp</p>
             </div>
           </div>
-          <div class='clearfix'>
+          <div class='col-xs-12 summary-item'>
             <div class="item-title">
               <p>Date:</p>
             </div>
@@ -69,7 +69,7 @@
               <p>Jan 2014 - Apr. 2014</p>
             </div>
           </div>
-          <div class='clearfix'>
+          <div class='col-xs-12 summary-item'>
             <div class="item-title">
               <p>Team Member:</p>
             </div>
@@ -77,7 +77,7 @@
               <p>Shih-Hsuan Chou, Xin liu, Chengqi Zhu, Changcheng Qian</p>
             </div>
           </div>
-          <div class='clearfix'>
+          <div class='col-xs-12 summary-item'>
             <div class="item-title">
               <p>My Role:</p>
             </div>
@@ -85,7 +85,7 @@
               <p>UX Designer</p>
             </div>
           </div>
-          <div class='clearfix'>
+          <div class='col-xs-12 summary-item'>
             <div class="item-title">
               <p>Tools:</p>
             </div>
@@ -95,8 +95,8 @@
           </div>
         </div>
       </div>
-      <div class="row" id="content-row">
-        <div class="col-xs-7" id="text-section">
+      <div class="row" >
+        <div class="col-xs-7 detail-wrap">
           <p>We used the data set of Oscar Best Picture movies, including winners and nominees from 1929 to 2014 and compared different variables, including rating, votes, budget, gross, and genre. We designed this visualization for users who want to find the trend and characteristics of Oscar Best Picture movies.<br> 
           <br>
           We did three visualizations to show the full context that corresponds to our use case:<br>
