--- a/project_map.html
+++ b/project_map.html
@@ -50,10 +50,10 @@
     </div>
 
     <div class="container">
-      <div class="row" id="title-row">
-        <div id="title-text-section" class="col-xs-12">
-          <div><h1 class="title-text clearfix">Michigan Ability Partner</h1><h3 class='subtitle-text'>Contextual Inquiry</h3></div>
-          <div class='clearfix'>
+      <div class="row row-summary">
+        <div class="col-xs-12 summary-title">
+          <div><h1>Michigan Ability Partner</h1><h3>Contextual Inquiry</h3></div>
+          <div class='col-xs-12 summary-item'>
             <div class="item-title">
               <p>&nbsp</p>
             </div>
@@ -61,7 +61,7 @@
               <p>&nbsp</p>
             </div>
           </div>
-          <div class='clearfix'>
+          <div class='col-xs-12 summary-item'>
             <div class="item-title">
               <p>Date:</p>
             </div>
@@ -69,7 +69,7 @@
               <p>Sep. 2012 - Dec. 2012</p>
             </div>
           </div>
-          <div class='clearfix'>
+          <div class='col-xs-12 summary-item'>
             <div class="item-title">
               <p>Team Member:</p>
             </div>
@@ -77,7 +77,7 @@
               <p>Hsiao-Chih Lin, Xinying Li, Derek Peterson, Rob Thomas</p>
             </div>
           </div>
-          <div class='clearfix'>
+          <div class='col-xs-12 summary-item'>
             <div class="item-title">
               <p>My Role:</p>
             </div>
@@ -85,7 +85,7 @@
               <p>Project Coordinator</p>
             </div>
           </div>
-          <div class='clearfix'>
+          <div class='col-xs-12 summary-item'>
             <div class="item-title">
               <p>Skills:</p>
             </div>
@@ -95,8 +95,8 @@
           </div>
         </div>
       </div>
-      <div class="row" id="content-row">
-        <div class="col-xs-7" id="text-section">
+      <div class="row" >
+        <div class="col-xs-7 detail-wrap">
           <p>This is a group project in SI 501 (Contextual Inquiry and Project Management) class. We worked with <a class='link-text' href='http://www.mapagency.org/' target="_blank"> Michigan Ability Partner (MAP) </a> to help them improve their contact process.<br>
           <br>
           We conducted six semi-structured contextual interviews with MAP staff and held a series of interpretation sessions. After all the interviews, we developed an affinity wall to group affinity notes to help find out what works well, some breakdowns and some design ideas. Also, we created flow model that illuminates the organization’s development process and further provide implement recommendations for improving their contact information management and fund-raising process.<br>
