--- a/project_starbucks.html
+++ b/project_starbucks.html
@@ -50,10 +50,10 @@
     </div>
 
     <div class="container">
-      <div class="row" id="title-row">
-        <div id="title-text-section" class="col-xs-12">
-          <div><h1 class="title-text clearfix">Starbucks</h1><h3 class='subtitle-text'>Fieldwork Research</h3></div>
-          <div class='clearfix'>
+      <div class="row row-summary">
+        <div class="col-xs-12 summary-title">
+          <div><h1>Starbucks</h1><h3>Fieldwork Research</h3></div>
+          <div class='col-xs-12 summary-item'>
             <div class="item-title">
               <p>&nbsp</p>
             </div>
@@ -61,7 +61,7 @@
               <p>&nbsp</p>
             </div>
           </div>
-          <div class='clearfix'>
+          <div class='col-xs-12 summary-item'>
             <div class="item-title">
               <p>&nbsp</p>
             </div>
@@ -69,7 +69,7 @@
               <p>&nbsp</p>
             </div>
           </div>
-          <div class='clearfix'>
+          <div class='col-xs-12 summary-item'>
             <div class="item-title">
               <p>Date:</p>
             </div>
@@ -77,7 +77,7 @@
               <p>Jan. 2013 - Apr. 2013</p>
             </div>
           </div>
-          <div class='clearfix'>
+          <div class='col-xs-12 summary-item'>
             <div class="item-title">
               <p>Type:</p>
             </div>
@@ -85,7 +85,7 @@
               <p>Individual Project</p>
             </div>
           </div>
-          <div class='clearfix'>
+          <div class='col-xs-12 summary-item'>
             <div class="item-title">
               <p>Skills:</p>
             </div>
@@ -95,8 +95,8 @@
           </div>
         </div>
       </div>
-      <div class="row" id="content-row">
-        <div class="col-xs-7" id="text-section">
+      <div class="row" >
+        <div class="col-xs-7 detail-wrap">
           <p>Starbucks is one of the largest coffeehouse companies in the world. Not only because of the good espressos they serve, but also because of the wonderful customer experiences which make it become the most popular chain coffeehouse that can find in every city. They also provide reading desks, sofas, newspapers, music, and free Wi-Fi, all these things make it a more comfortable place than the library where you would go to do your homework, cozier place than your home where you would spend a whole weekend afternoon, friendlier place than the dining halls in school where you would have a chat with friends. Just order a cup of hot café latte, find a good spot in the store and you are ready to spend the next few hours to do the things you want.<br> 
           <br>
           In order to get a more in-depth understanding of the various things done by a variety of people that visit Starbucks, I conduct a six-hour-long non-participant observation that separates into three dates in three different time periods of a day.<br>
