--- a/project_uxi.html
+++ b/project_uxi.html
@@ -50,10 +50,10 @@
     </div>
 
     <div class="container">
-      <div class="row" id="title-row">
-        <div id="title-text-section" class="col-xs-12">
-          <div><h1 class="title-text clearfix">UXI Design</h1><h3 class='subtitle-text'>UX Design & Research Intern</h3></div>
-          <div class='clearfix'>
+      <div class="row row-summary">
+        <div class="col-xs-12 summary-title">
+          <div><h1>UXI Design</h1><h3>UX Design & Research Intern</h3></div>
+          <div class='col-xs-12 summary-item'>
             <div class="item-title">
               <p>&nbsp</p>
             </div>
@@ -61,7 +61,7 @@
               <p>&nbsp</p>
             </div>
           </div>
-          <div class='clearfix'>
+          <div class='col-xs-12 summary-item'>
             <div class="item-title">
               <p>Date:</p>
             </div>
@@ -69,7 +69,7 @@
               <p>May 2013 - Aug. 2013</p>
             </div>
           </div>
-          <div class='clearfix'>
+          <div class='col-xs-12 summary-item'>
             <div class="item-title">
               <p>My Role:</p>
             </div>
@@ -77,7 +77,7 @@
               <p>UX Designer and Researcher</p>
             </div>
           </div>
-          <div class='clearfix'>
+          <div class='col-xs-12 summary-item'>
             <div class="item-title">
               <p>Skills:</p>
             </div>
@@ -85,7 +85,7 @@
               <p>Interview, Survey, Prototyping, User Testing</p>
             </div>
           </div>
-          <div class='clearfix'>
+          <div class='col-xs-12 summary-item'>
             <div class="item-title">
               <p>Tools:</p>
             </div>
@@ -95,8 +95,8 @@
           </div>
         </div>
       </div>
-      <div class="row" id="content-row">
-        <div class="col-xs-7" id="text-section">
+      <div class="row" >
+        <div class="col-xs-7 detail-wrap">
           <p>I interned at <a class='link-text' href='http://uxi-design.com/index_en.php' target="_blank"> UXI Design </a> as an UX/UI design and research intern for 2013 summer. UXI is a design company cares about how to create a better user experience and user interface. During my internship, I got involved in multiple projects: I worked with my mentor as a consultant with Microsoft Taiwan UX team to help developers understand and design Windows 8 applications with their user-centered design principles; I brainstormed with the design team and created prototypes for a new tablet operating system design, and further conducted two rounds of user testing to validate our design; I planned stakeholder interviews for initiating the website redesign and built new sitemap.<br>
           <br>
           I am willing to share more about my work example and experiences offline!
