--- a/project_clotho.html
+++ b/project_clotho.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <meta charset="utf-8">
@@ -13,159 +14,158 @@
     <title>Amber Lin | Clotho</title>
 
     <!-- Bootstrap core CSS -->
-     
+
 
     <!-- Custom styles for this template -->
     <link href="css/application.css" rel="stylesheet">
 
-        <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-  </head>
+</head>
 
-  <body>
+<body>
 
     <div class="navbar navbar-fixed-top" role="navigation" id="navi-section">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-id">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-logo" href="index.html"><img src="img/logo.png"/><div class='logo-name'>Amber Lin</div><div class='logo-title'>UX/UI Designer</div></a>
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-id">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-logo" href="index.html"><img src="img/logo.png" />
+                    <div class='logo-name'>Amber Lin</div>
+                    <div class='logo-title'>UX/UI Designer</div>
+                </a>
+            </div>
+            <div class="collapse navbar-collapse" id="navbar-collapse-id">
+                <ul id="navi-menu" class="nav navbar-nav">
+                    <!-- <li class="active"><a href="#">Home</a></li> -->
+                    <li class="active"><a href="index.html">Portfolio</a></li>
+                    <li><a href="about.html">About Me</a></li>
+                    <li><a href="resume.html">Resume</a></li>
+                </ul>
+            </div>
+            <!--/.nav-collapse -->
         </div>
-        <div class="collapse navbar-collapse" id="navbar-collapse-id">
-          <ul id="navi-menu" class="nav navbar-nav">
-            <!-- <li class="active"><a href="#">Home</a></li> -->
-            <li class="active"><a href="index.html">Portfolio</a></li>
-            <li><a href="about.html">About Me</a></li>
-            <li><a href="resume.html">Resume</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
     </div>
 
     <div class="container">
-      <div class="row" id="title-row">
-        <div id="title-text-section" class="col-xs-12">
-          <div><h1 class="title-text clearfix">Clotho</h1><h3 class='subtitle-text'>Interaction Design</h3></div>
-          <div class='clearfix'>
-            <div class="item-title">
-              <p>&nbsp</p>
+        <div class="row row-summary">
+            <div class="col-xs-12 summary-title">
+                <h1>Clotho</h1>
+                <h3>Interaction Design</h3>
             </div>
-            <div class="item-content">
-              <p>&nbsp</p>
+            <div class='col-xs-12 summary-item'>
+                <div class="item-title">
+                    <p>Date:</p>
+                </div>
+                <div class="item-content">
+                    <p>Jan. 2014 - Apr. 2014</p>
+                </div>
             </div>
-          </div>
-          <div class='clearfix'>
-            <div class="item-title">
-              <p>Date:</p>
+            <div class='col-xs-12 summary-item'>
+                <div class="item-title">
+                    <p>My Role:</p>
+                </div>
+                <div class="item-content">
+                    <p>Interaction Designer</p>
+                </div>
             </div>
-            <div class="item-content">
-              <p>Jan. 2014 - Apr. 2014</p>
+            <div class='col-xs-12 summary-item'>
+                <div class="item-title">
+                    <p>Skills:</p>
+                </div>
+                <div class="item-content">
+                    <p>Sketching, Comparative Analysis, Persona/Scenario, Paper Prototyping, Digital Prototyping</p>
+                </div>
             </div>
-          </div>
-          <div class='clearfix'>
-            <div class="item-title">
-              <p>My Role:</p>
+            <div class='col-xs-12 summary-item'>
+                <div class="item-title">
+                    <p>Tools:</p>
+                </div>
+                <div class="item-content">
+                    <p>Photoshop, Illustrator, Axure</p>
+                </div>
             </div>
-            <div class="item-content">
-              <p>Interaction Designer</p>
-            </div>
-          </div>
-          <div class='clearfix'>
-            <div class="item-title">
-              <p>Skills:</p>
-            </div>
-            <div class="item-content">
-              <p>Sketching, Comparative Analysis, Persona/Scenario, Paper Prototyping, Digital Prototyping</p>
-            </div>
-          </div>
-          <div class='clearfix'>
-            <div class="item-title">
-              <p>Tools:</p>
-            </div>
-            <div class="item-content">
-              <p>Photoshop, Illustrator, Axure</p>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="row" id="content-row">
-        <div class="col-xs-7" id="text-section">
-          <p>This is an individual project in SI 582 (Introduction to Interaction Design) class, I designed a mobile application named Clotho that not only helps people who live near can sell, buy and swap their pre-loved clothes to each other, but also encourage an in-person social interaction between neighbors to let community members have a much closer relationship.</p>
-          <br>
-          <h4>Design Problem</h4>
-          </br>
-          <p>I believe that most people, especially girls or women, have encountered some similar situations as follows: bought a cute dress, but your sister told you that was not your style; bought a lot of clothes on sale, but found that you already had a similar one when you got home; bought a furry jacket, but got no opportunity to wear it out. Sounds familiar? When I was in the college, I heard that there were some events like flea markets that helping gather students who live in the same dorm can sell their stuff to each other. That inspired me an idea: why not offer a mobile platform for a community to sell, buy, and swap pre-loved clothes? Also, it can be a platform that people can further host some events or meet each other in the real world.</p> 
-          <br>
-          <h4>Process</h4>
-          <br>
-          <p>
-          • I researched some similar or related system to learn what kind of aspects I should pay attention to and which aspects I could learn to improve.<br>
-          <br>
-          • I created three personas/scenarios to describe the potential users and what are their needs; and also drew a storyboard to briefly tell how Clotho works.<br>
-          <br>
-          • I created a paper prototype to roughly show what Clotho will look like and how the interaction will work and used Axure to create mid-fi digital prototype.<br>
-          <br>
-          </p>
-          <h4>Solution</h4>
-          </br>
-          <p>I proposed Clotho, a mobile application which is not only a platform for neighboring communities to sell, buy, and swap pre-loved clothes, but also enhance much closer relationship through the transaction and interaction process between neighbors. Furthermore, I hope the transaction of Clotho can be more secure, the interface can be user-friendly, the information can be presented more simple and clear, and it can successfully encourage the interaction between neighbors.<br>
-          <br>
-          Here are some features of Clotho:<br>
-          <br>
-          • Clotho is a photo-based mobile application like Instagram<br> 
-          • Clotho only shows most important information, including brand/size/price to users in the home page<br>
-          • Users can like their favorite clothes and add to their wish lists<br>
-          • Users can add comments or leave messages to other users<br>
-          • Users can follow other users<br>
-          • Users can upload any items without charging any fee<br>
-          • Users can upload any items with in-app camera<br>
-          • Users can host or join any parties<br>
-          • System will automatically recommend items/parties based on users’ location and interested styles<br>
-          • System will not meddle in any transaction<br>
-          <br>
-          <br>
-          <a class='attachment-text' href='https://www.youtube.com/watch?v=n8E1nxW2jvA'  target="_blank">➢ Paper Prototype</a><br> 
-          <a class='attachment-text' href='http://nli81f.axshare.com/'  target="_blank">➢ Mid-fi Prototype</a><br> 
-          </p>
+    </div>
+    <div class="row">
+        <div class="col-xs-7 detail-wrap">
+            <h3>Overview</h3>
+            <p>This is an individual project in SI 582 (Introduction to Interaction Design) class, I designed a mobile application named Clotho that not only helps people who live near can sell, buy and swap their pre-loved clothes to each other, but also
+                encourage an in-person social interaction between neighbors to let community members have a much closer relationship.</p>
+            <h3>Design Problem</h3>
+            <p>I believe that most people, especially girls or women, have encountered some similar situations as follows: bought a cute dress, but your sister told you that was not your style; bought a lot of clothes on sale, but found that you already
+                had a similar one when you got home; bought a furry jacket, but got no opportunity to wear it out. Sounds familiar? When I was in the college, I heard that there were some events like flea markets that helping gather students who live
+                in the same dorm can sell their stuff to each other. That inspired me an idea: why not offer a mobile platform for a community to sell, buy, and swap pre-loved clothes? Also, it can be a platform that people can further host some events
+                or meet each other in the real world.</p>
+            <h3>Process</h3>
+            <ul>
+              <li>I researched some similar or related system to learn what kind of aspects I should pay attention to and which aspects I could learn to improve.</li>
+              <li>I created three personas/scenarios to describe the potential users and what are their needs; and also drew a storyboard to briefly tell how Clotho works.</li>
+              <li>I created a paper prototype to roughly show what Clotho will look like and how the interaction will work and used Axure to create mid-fi digital prototype.</li>
+            </ul>
+            <h3>Solution</h3>
+            <p>I proposed Clotho, a mobile application which is not only a platform for neighboring communities to sell, buy, and swap pre-loved clothes, but also enhance much closer relationship through the transaction and interaction process between neighbors.
+                Furthermore, I hope the transaction of Clotho can be more secure, the interface can be user-friendly, the information can be presented more simple and clear, and it can successfully encourage the interaction between neighbors.</p>
+
+              <p>Here are some features of Clotho:</p>
+                <ul>
+                 <li>Clotho is a photo-based mobile application like Instagram</li>
+                 <li>Clotho only shows most important information, including brand/size/price to users in the home page</li>
+                 <li>Users can like their favorite clothes and add to their wish lists</li>
+                 <li>Users can add comments or leave messages to other users</li>
+                 <li>Users can follow other users</li>
+                 <li>Users can upload any items without charging any fee</li>
+                 <li>Users can upload any items with in-app camera</li>
+                 <li>Users can host or join any parties</li>
+                 <li>System will automatically recommend items/parties based on users’ location and interested styles</li>
+                 <li>System will not meddle in any transaction</li>
+                </ul>
+
+
+                <a class='attachment-text' href='https://www.youtube.com/watch?v=n8E1nxW2jvA' target="_blank"><p>➢ Paper Prototype</p></a>
+
+                <a class='attachment-text' href='http://nli81f.axshare.com/' target="_blank"><p>➢ Mid-fi Prototype</p></a>
+
+            </p>
         </div>
         <div class="col-xs-5" id="img-section">
-          <div class="img-text-section">
-            <img class="project-img" src="img/pic/clotho_persona.png"/>
-            <p>Persona</p>
-          </div>
-          <div class="img-text-section">
-            <img class="project-img" src="img/pic/clotho_login.png"/>
-            <p>Prototype_Login Page</p>
-          </div>
-          <div class="img-text-section">
-            <img class="project-img" src="img/pic/clotho_home.png"/>
-            <p>Prototype_Home Page</p>
-          </div>
-          <div class="img-text-section">
-            <img class="project-img" src="img/pic/clotho_party.png"/>
-            <p>Prototype_Party Page</p>
-          </div>
+            <div class="img-text-section">
+                <img class="project-img" src="img/pic/clotho_persona.png" />
+                <p>Persona</p>
+            </div>
+            <div class="img-text-section">
+                <img class="project-img" src="img/pic/clotho_login.png" />
+                <p>Prototype_Login Page</p>
+            </div>
+            <div class="img-text-section">
+                <img class="project-img" src="img/pic/clotho_home.png" />
+                <p>Prototype_Home Page</p>
+            </div>
+            <div class="img-text-section">
+                <img class="project-img" src="img/pic/clotho_party.png" />
+                <p>Prototype_Party Page</p>
+            </div>
         </div>
-      </div>
-    </div><!-- /.container -->
+    </div>
+    </div>
+    <!-- /.container -->
 
     <div class="footer">
-      <div class="container">
-        <p class="footer-text">All Right Reserved © Amber Lin 2016</p>
-        <div class="footer-social">
-          <a href="mailto:imbeckybecky@gmail.com"><img src="img/social/email.png" class="social-icon" /></a1>
-          
-          <a href="https://www.linkedin.com/in/yuhlin/" target="_blank"><img src="img/social/linkedin.png" class="social-icon" /></a>
-          <a href="mailto:imbeckybecky@gmail.com"><img src="img/social/email.png" class="social-icon" /></a>
+        <div class="container">
+            <p class="footer-text">All Right Reserved © Amber Lin 2016</p>
+            <div class="footer-social">
+                <a href="mailto:imbeckybecky@gmail.com"><img src="img/social/email.png" class="social-icon" /></a1>
+
+                    <a href="https://www.linkedin.com/in/yuhlin/" target="_blank"><img src="img/social/linkedin.png" class="social-icon" /></a>
+                    <a href="mailto:imbeckybecky@gmail.com"><img src="img/social/email.png" class="social-icon" /></a>
+            </div>
         </div>
-      </div>
     </div>
 
 
@@ -175,9 +175,10 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script type="text/javascript">
-      // $(document).ready(function(){
-      //   $('#title-row').width($(document).width());
-      // })
+        // $(document).ready(function(){
+        //   $('#title-row').width($(document).width());
+        // })
     </script>
-  </body>
+</body>
+
 </html>
