--- a/project_giftmasters.html
+++ b/project_giftmasters.html
@@ -50,10 +50,10 @@
     </div>
 
     <div class="container">
-      <div class="row" id="title-row">
-        <div id="title-text-section" class="col-xs-12">
-          <div><h1 class="title-text clearfix">Gift Masters</h1><h3 class='subtitle-text'>Online Questionnaire Design</h3></div>
-          <div class='clearfix'>
+      <div class="row row-summary">
+        <div class="col-xs-12 summary-title">
+          <div><h1>Gift Masters</h1><h3>Online Questionnaire Design</h3></div>
+          <div class='col-xs-12 summary-item'>
             <div class="item-title">
               <p>&nbsp</p>
             </div>
@@ -61,7 +61,7 @@
               <p>&nbsp</p>
             </div>
           </div>
-          <div class='clearfix'>
+          <div class='col-xs-12 summary-item'>
             <div class="item-title">
               <p>Date:</p>
             </div>
@@ -69,7 +69,7 @@
               <p>Apr. 2015 - Jun. 2015</p>
             </div>
           </div>
-          <div class='clearfix'>
+          <div class='col-xs-12 summary-item'>
             <div class="item-title">
               <p>My Role:</p>
             </div>
@@ -77,7 +77,7 @@
               <p>UX / UI Designer</p>
             </div>
           </div>
-          <div class='clearfix'>
+          <div class='col-xs-12 summary-item'>
             <div class="item-title">
               <p>Skills:</p>
             </div>
@@ -85,7 +85,7 @@
               <p>Wireframing, Prototyping</p>
             </div>
           </div>
-          <div class='clearfix'>
+          <div class='col-xs-12 summary-item'>
             <div class="item-title">
               <p>Tools:</p>
             </div>
@@ -95,8 +95,8 @@
           </div>
         </div>
       </div>
-      <div class="row" id="content-row">
-        <div class="col-xs-12" id="text-section">
+      <div class="row" >
+        <div class="col-xs-12 detail-wrap">
           <p>This is the project I worked with 199 insights, Inc. We were building a website named Gift masters. It is a website which helps people choose gift for their friends or significant other. With completing a short questionnaire, our system will give the user a list of personalized gift recommendations.</p>
           <br>
           <h4>Design Process</h4>
