--- a/project_graphic.html
+++ b/project_graphic.html
@@ -50,10 +50,10 @@
     </div>
 
     <div class="container">
-      <div class="row" id="title-row">
-        <div id="title-text-section" class="col-xs-12">
-          <div><h1 class="title-text clearfix">Graphic Design</h1><h3 class='subtitle-text'>Design Works</h3></div>
-          <div class='clearfix'>
+      <div class="row row-summary">
+        <div class="col-xs-12 summary-title">
+          <div><h1>Graphic Design</h1><h3>Design Works</h3></div>
+          <div class='col-xs-12 summary-item'>
             <div class="item-title">
               <p>&nbsp</p>
             </div>
@@ -61,7 +61,7 @@
               <p>&nbsp</p>
             </div>
           </div>
-          <div class='clearfix'>
+          <div class='col-xs-12 summary-item'>
             <div class="item-title">
               <p>&nbsp</p>
             </div>
@@ -69,7 +69,7 @@
               <p>&nbsp</p>
             </div>
           </div>
-          <div class='clearfix'>
+          <div class='col-xs-12 summary-item'>
             <div class="item-title">
               <p>Date:</p>
             </div>
@@ -77,7 +77,7 @@
               <p>Sep. 2013 - Dec. 2013</p>
             </div>
           </div>
-          <div class='clearfix'>
+          <div class='col-xs-12 summary-item'>
             <div class="item-title">
               <p>Skills:</p>
             </div>
@@ -85,7 +85,7 @@
               <p>Sketching, Prototyping, Graphic Design</p>
             </div>
           </div>
-          <div class='clearfix'>
+          <div class='col-xs-12 summary-item'>
             <div class="item-title">
               <p>Tools:</p>
             </div>
@@ -95,8 +95,8 @@
           </div>
         </div>
       </div>
-      <div class="row" id="content-row">
-        <div class="col-xs-12" id="text-section">
+      <div class="row" >
+        <div class="col-xs-12 detail-wrap">
           <p>These graphic design works include banner, brochure, postcard, poster and website mockup.</p>
           <br>
           <br>
