--- a/project_kono.html
+++ b/project_kono.html
@@ -50,10 +50,10 @@
     </div>
 
     <div class="container">
-      <div class="row" id="title-row">
-        <div id="title-text-section" class="col-xs-12">
-          <div><h1 class="title-text clearfix">Kono</h1><h3 class='subtitle-text'>Quotelet</h3></div>
-          <div class='clearfix'>
+      <div class="row row-summary">
+        <div class="col-xs-12 summary-title">
+          <div><h1>Kono</h1><h3>Quotelet</h3></div>
+          <div class='col-xs-12 summary-item'>
             <div class="item-title">
               <p>&nbsp</p>
             </div>
@@ -61,7 +61,7 @@
               <p>&nbsp</p>
             </div>
           </div>
-          <div class='clearfix'>
+          <div class='col-xs-12 summary-item'>
             <div class="item-title">
               <p>Date:</p>
             </div>
@@ -69,7 +69,7 @@
               <p>Oct. 2014 - Feb. 2015</p>
             </div>
           </div>
-          <div class='clearfix'>
+          <div class='col-xs-12 summary-item'>
             <div class="item-title">
               <p>My Role:</p>
             </div>
@@ -77,7 +77,7 @@
               <p>UX Designer and Researcher</p>
             </div>
           </div>
-          <div class='clearfix'>
+          <div class='col-xs-12 summary-item'>
             <div class="item-title">
               <p>Skills:</p>
             </div>
@@ -85,7 +85,7 @@
               <p>Survey Design, Interviews, Diary Study, Prototyping</p>
             </div>
           </div>
-          <div class='clearfix'>
+          <div class='col-xs-12 summary-item'>
             <div class="item-title">
               <p>Tools:</p>
             </div>
@@ -95,8 +95,8 @@
           </div>
         </div>
       </div>
-      <div class="row" id="content-row">
-        <div class="col-xs-7" id="text-section">
+      <div class="row" >
+        <div class="col-xs-7 detail-wrap">
           <p>This is the project I worked at Kono. We were developing a social tool named Quotelet. Quotelet helps user easily and quickly collect the quote they like, edit and share it with friends when they are reading articles online. So far, it is a plug-in extension that installed in Google Chrome. However, based on our user research, we were thinking to develop a mobile or a tablet version in the future. </p>
           <br>
           <h4>My Responsibilities</h4>
