--- a/project_nuwa.html
+++ b/project_nuwa.html
@@ -50,10 +50,10 @@
     </div>
 
     <div class="container">
-      <div class="row" id="title-row">
-        <div id="title-text-section" class="col-xs-12">
-          <div><h1 class="title-text clearfix">Nuwa</h1><h3 class='subtitle-text'>CHI 2014 Student Design Competition</h3></div>
-          <div class='clearfix'>
+      <div class="row row-summary">
+        <div class="col-xs-12 summary-title">
+          <div><h1>Nuwa</h1><h3>CHI 2014 Student Design Competition</h3></div>
+          <div class='col-xs-12 summary-item'>
             <div class="item-title">
               <p>Date:</p>
             </div>
@@ -61,7 +61,7 @@
               <p>Sep. 2013 - Apr. 2014</p>
             </div>
           </div>
-          <div class='clearfix'>
+          <div class='col-xs-12 summary-item'>
             <div class="item-title">
               <p>Team Member:</p>
             </div>
@@ -69,7 +69,7 @@
               <p>Xin Liu, Yuan Gao, Xinying Li, Lin Pang</p>
             </div>
           </div>
-          <div class='clearfix'>
+          <div class='col-xs-12 summary-item'>
             <div class="item-title">
               <p>My Role:</p>
             </div>
@@ -77,7 +77,7 @@
               <p>UX Designer and Researcher</p>
             </div>
           </div>
-          <div class='clearfix'>
+          <div class='col-xs-12 summary-item'>
             <div class="item-title">
               <p>Skills:</p>
             </div>
@@ -85,7 +85,7 @@
               <p>Interviews, Survey Design, Prototyping, User Testing</p>
             </div>
           </div>
-          <div class='clearfix'>
+          <div class='col-xs-12 summary-item'>
             <div class="item-title">
               <p>Tools:</p>
             </div>
@@ -95,8 +95,8 @@
           </div>
         </div>
       </div>
-      <div class="row" id="content-row">
-        <div class="col-xs-7" id="text-section">
+      <div class="row" >
+        <div class="col-xs-7 detail-wrap">
           <p>Nuwa got accepted in <a class='link-text' href='http://chi2014.acm.org/authors/student-design-competition' target="_blank"> CHI 2014 Student Design Competition</a> Top 12 out of 65 teams and was presented at CHI 2014 conference.</p>
           <br>
           <h4>Design Problem</h4>
