--- a/project_scistarter.html
+++ b/project_scistarter.html
@@ -50,10 +50,10 @@
     </div>
 
     <div class="container">
-      <div class="row" id="title-row">
-        <div id="title-text-section" class="col-xs-12">
-          <div><h1 class="title-text clearfix">SciStarter</h1><h3 class='subtitle-text'>Usability Evaluation</h3></div>
-          <div class='clearfix'>
+      <div class="row row-summary">
+        <div class="col-xs-12 summary-title">
+          <div><h1>SciStarter</h1><h3>Usability Evaluation</h3></div>
+          <div class='col-xs-12 summary-item'>
             <div class="item-title">
               <p>&nbsp</p>
             </div>
@@ -61,7 +61,7 @@
               <p>&nbsp</p>
             </div>
           </div>
-          <div class='clearfix'>
+          <div class='col-xs-12 summary-item'>
             <div class="item-title">
               <p>Date:</p>
             </div>
@@ -69,7 +69,7 @@
               <p>Jan. 2013 - Apr. 2013</p>
             </div>
           </div>
-          <div class='clearfix'>
+          <div class='col-xs-12 summary-item'>
             <div class="item-title">
               <p>Team Member:</p>
             </div>
@@ -77,7 +77,7 @@
               <p>Hengjuan Qian, Jamin Koo, Edgar Nunez, John Simpkins</p>
             </div>
           </div>
-          <div class='clearfix'>
+          <div class='col-xs-12 summary-item'>
             <div class="item-title">
               <p>My Role:</p>
             </div>
@@ -85,7 +85,7 @@
               <p>UX Researcher</p>
             </div>
           </div>
-          <div class='clearfix'>
+          <div class='col-xs-12 summary-item'>
             <div class="item-title">
               <p>Skills:</p>
             </div>
@@ -95,8 +95,8 @@
           </div>
         </div>
       </div>
-      <div class="row" id="content-row">
-        <div class="col-xs-7" id="text-section">
+      <div class="row" >
+        <div class="col-xs-7 detail-wrap">
           <p>This is a group project in SI 622 (Needs Assessment and Usability Evaluation) class. We worked with <a class='link-text' href='http://scistarter.com/' target="_blank"> SciStarter </a> to help them analyze their target users’ needs and evaluate the usability of their website by going through solid evaluation processes.<br>
           <br>
           SciStarter is a division of Science for Citizens, LLC, whose web presence exists to provide access to the citizen science projects it aggregates for citizen scientists around the world. The website offers a project finder that connects interested citizen scientists with projects that can be done at home. The project listings are maintained by SciStarter staff and feature research groups who would like to recruit volunteers. The goal and tasks, as well as the link for participating in the project, are found on each project page.<br>
